--- a/index.html
+++ b/index.html
@@ -5,23 +5,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Search Data</title>
 </head>
 
 <body>
 
-    <div id="tools-container">
-        <select name="sort by" id="sort-options">
-            <option>Sort BY</option>
-        </select>
-        <input type="text" id="search-input">
-        <button id="reset">Reset</button>
-    </div>
-    <div id="data-container">
-        <table id="data-table">
+    <div id="main-container">
+        <div id="tools-container">
+            <select name="sort by" id="sort-options">
+                <option value="all">all</option>
+                <option value="all">id</option>
+                <option value="all">gender</option>
+                <option value="all">firstName</option>
+                <option value="all">lastName</option>
+                <option value="all">hobby</option>
+                <option value="all">age</option>
+                <option value="all">capsule</option>
+            </select>
+            <input type="text" id="search-input">
+            <button id="reset">Reset</button>
+        </div>
+        <div id="data-container">
+            <table id="data-table">
+                <tr>
+                    <th>id</th>
+                    <th>gender</th>
+                    <th>firstName</th>
+                    <th>lastName</th>
+                    <th>hobby</th>
+                    <th>age</th>
+                    <th>capsule</th>
+                </tr>
+            </table>
+        </div>
 
-        </table>
     </div>
+
 </body>
 
 </html>
