--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <div id="tools-container">
             <select name="sort by" id="sort-options">
                 <option value="all">all</option>
-                <option value="all">id</option>
-                <option value="all">gender</option>
-                <option value="all">firstName</option>
-                <option value="all">lastName</option>
-                <option value="all">hobby</option>
-                <option value="all">age</option>
-                <option value="all">capsule</option>
+                <option value="id">id</option>
+                <option value="gender">gender</option>
+                <option value="firstName">firstName</option>
+                <option value="lastName">lastName</option>
+                <option value="hobby">hobby</option>
+                <option value="age">age</option>
+                <option value="capsule">capsule</option>
             </select>
             <input type="text" id="search-input">
             <button id="reset">Reset</button>
@@ -37,10 +37,12 @@
                     <th>age</th>
                     <th>capsule</th>
                 </tr>
+
             </table>
         </div>
 
     </div>
+    <script src="./script.js"></script>
 
 </body>
 
