css class added 2

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div id="data-container">
             <table id="data-table">
-                <tr>
+                <tr class="row">
                     <th>id</th>
                     <th>gender</th>
                     <th>firstName</th>
@@ -40,7 +40,7 @@
         </div>
 
     </div>
-    <script src="./scripts/rowBuilder.js"></script>
+    <script src="./scripts/main.js"></script>
 </body>
 
 </html>
