--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         </table>
       </div>
     </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./scripts/main.js"></script>
   </body>
 </html>
