--- a/index.html
+++ b/index.html
@@ -29,15 +29,14 @@
         <div id="data-container">
             <table id="data-table">
                 <tr>
-                    <th>id</th>
-                    <th>gender</th>
-                    <th>firstName</th>
-                    <th>lastName</th>
-                    <th>hobby</th>
-                    <th>age</th>
-                    <th>capsule</th>
+                    <th id="sort-by-id">id</th>
+                    <th id="sort-by-gender">gender</th>
+                    <th id="sort-by-firstName">firstName</th>
+                    <th id="sort-by-lastName">lastName</th>
+                    <th id="sort-by-hobby">hobby</th>
+                    <th id="sort-by-age">age</th>
+                    <th id="sort-by-capsule">capsule</th>
                 </tr>
-
             </table>
         </div>
 
