--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <option value="capsule">Capsule</option>
         </select>
         <input type="text" id="search-input" />
-        <button id="reset">Reset</button>
+        <button onClick="window.location.reload();">restart</button>
       </div>
       <div id="data-container">
         <table id="data-table">
